--- a/www/react-ui/package.json
+++ b/www/react-ui/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-toolbox": "^2.0.0-beta.12"
+    "react-toolbox": "^2.0.0-beta.12",
+    "react-router-dom": "4.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
