--- a/www/react-ui/package.json
+++ b/www/react-ui/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-toolbox": "^2.0.0-beta.12",
-    "react-router-dom": "4.1.2"
+    "react-router-dom": "4.1.2",
+    "react-toolbox": "^2.0.0-beta.12"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
@@ -23,6 +23,7 @@
     "eslint": "~3.14.0",
     "eslint-plugin-babel": "~4.0.1",
     "eslint-plugin-react": "^6.9.0",
+    "loglevel": "^1.4.1",
     "postcss-cssnext": "^2.9.0",
     "postcss-each": "^0.9.3",
     "postcss-import": "^9.1.0",
@@ -32,7 +33,7 @@
     "redux-devtools-extension": "^1.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "webpack-dev-server": "^2.6.0"
   },
   "scripts": {
     "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --colors --config webpack.config.js",
