--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "4.1.2",
-    "react-toolbox": "^2.0.0-beta.12"
+    "react-toolbox": "^2.0.0-beta.12",
+    "react-graph-vis": "^0.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
@@ -15,6 +16,10 @@
     "babel-eslint": "~7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-node-env-inline": "^6.8.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-plugin-transform-es3-property-literals": "^6.18.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
@@ -30,7 +35,6 @@
     "postcss-loader": "^1.2.2",
     "postcss-mixins": "^5.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
-    "redux-devtools-extension": "^1.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.6.0"
@@ -41,5 +45,5 @@
     "deploy": "gh-pages -d build"
   },
   "author": "",
-  "license": "Apache2.0"
+  "license": "Apache-2.0"
 }
