--- a/apache.conf
+++ b/apache.conf
@@ -2,16 +2,13 @@
   ServerName contractor
 #  ServerAlias contractor.<domain>
 
-  WSGIScriptAlias / /var/www/contractor/django.wsgi
+  WSGIScriptAlias /api /var/www/contractor/api/contractor.wsgi
   WSGIDaemonProcess contractor display-name=%{GROUP}
   WSGIProcessGroup contractor
 
-  Alias /static/admin /usr/share/python-django-common/django/contrib/admin/static/admin
-  Alias /ui /var/www/contractor/ui
-  Alias /static /var/www/contractor/static
+  DocumentRoot /var/www/contractor/ui
 
   LogFormat "%a %t %D \"%r\" %>s %I %O \"%{Referer}i\" \"%{User-Agent}i\" %X" contractor_log
   ErrorLog ${APACHE_LOG_DIR}/contractor_error.log
   CustomLog ${APACHE_LOG_DIR}/contractor_access.log contractor_log
 </VirtualHost>
-
