--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,13 @@
 Source: contractor
-Section: t3kton
+Section: multiverse/python
 Priority: optional
-Maintainer: Peter Howe <pnhowe@gmail.com>
-Build-Depends: cdbs (>= 0.4.90), debhelper (>= 7), python3 (>= 3.4), python3-dev (>=3.4), python3-setuptools (>=20.0), lsb-release
+Maintainer: Peter Howe <peter.howe@emc.com>
+Build-Depends: cdbs, debhelper (>= 7), python3 (>= 3.4), python3-dev (>=3.4), python3-setuptools (>= 20.0), nodejs (>= 4.2.0), lsb-release
 Standards-Version: 3.8.3
 X-Python-Version: >= 3.4
 
 Package: contractor
 Architecture: all
-Depends: python-django (>= 1.7), python-simplejson, apache2, libapache2-mod-wsgi, libapache2-mod-python, postgresql-client-9.3, python-psycopg2, python-magic, python-cinp (>= 0.7), ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
+Depends: python3 (>= 3.4), python3-django, apache2, libapache2-mod-wsgi-py3, postgresql-client, python3-werkzeug, python3-psycopg2, python3-cinp (>= 0.9), ${misc:Depends}, ${python3:Depends}
 Description: Contractor
   Contractor
-
