--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,9 @@ Source: contractor
 Section: multiverse/python
 Priority: optional
 Maintainer: Peter Howe <pnhowe@gmail.com>
-Build-Depends: cdbs, debhelper (>= 7), python3 (>= 3.4), python3-dev (>=3.4), python3-setuptools (>= 20.0), nodejs (>= 4.2.0), lsb-release
+Build-Depends: debhelper (>= 7), python3 (>= 3.4), python3-dev (>=3.4), python3-setuptools (>= 20.0), npm (>= 3.5), nodejs-legacy (>= 4.2.6~dfsg), lsb-release
 Standards-Version: 3.8.3
-X-Python-Version: >= 3.4
+X-Python3-Version: >= 3.4
 
 Package: contractor
 Architecture: all
