--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -17,7 +17,7 @@ Vagrant.configure(2) do |config|
   # "install" contractor
   config.vm.synced_folder "../contractor", "/usr/lib/python3/dist-packages/contractor", create: true, :mount_options => ["ro"]
   config.vm.synced_folder "../../contractor_plugins/contractor_plugins", "/usr/lib/python3/dist-packages/contractor_plugins", create: true, :mount_options => ["ro"]  # remove when the git clone of the  plugins works
-  config.vm.synced_folder "../local", "/usr/local/contractor", create: true, :mount_options => ["ro"]
+  config.vm.synced_folder "../lib", "/usr/lib/contractor", create: true, :mount_options => ["ro"]
   config.vm.synced_folder "../ui", "/tmp/contractor_ui", create: true, :mount_options => ["ro"]
   config.vm.provision "file", source: "../contractor.conf", destination: "/tmp/contractor.conf"
   config.vm.provision "file", source: "api.service", destination: "/tmp/api.service"
@@ -51,11 +51,11 @@ cp -a src/www/* build
 
 mkdir /opt/contractor
 
-/usr/local/contractor/util/manage.py migrate
-/usr/local/contractor/util/manage.py createsuperuser --noinput --username=root --email=test@test.com
-echo "from django.contrib.auth.models import User; u = User.objects.get(); u.set_password('root'); u.save()" | /usr/local/contractor/util/manage.py shell
+/usr/lib/contractor/util/manage.py migrate
+/usr/lib/contractor/util/manage.py createsuperuser --noinput --username=root --email=test@test.com
+echo "from django.contrib.auth.models import User; u = User.objects.get(); u.set_password('root'); u.save()" | /usr/lib/contractor/util/manage.py shell
 
-DEMO_MODE=1 /usr/local/contractor/api_server/load_test_data_manual
+DEMO_MODE=1 /usr/lib/contractor/api_server/load_test_data_manual
 
 mv /tmp/www.service /lib/systemd/system/www.service
 mv /tmp/api.service /lib/systemd/system/api.service
