--- a/master.conf.sample
+++ b/master.conf.sample
@@ -76,7 +76,7 @@ WSGI_APPLICATION = 'contractor.wsgi.application'
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': '/opt/contractor/db.sqlite3',
+        'NAME': '/var/lib/contractor/db.sqlite3',
     }
 }
 
