--- a/master.conf.sample
+++ b/master.conf.sample
@@ -99,3 +99,10 @@ USE_TZ = True
 # https://docs.djangoproject.com/en/1.8/howto/static-files/
 
 STATIC_URL = '/static/'
+
+# Bind Zone file Settings
+# NOTE: email should have a '.' in place of the '@', in most cases
+# it dose not have to be a real email address
+BIND_ALLOW_TRANSFER = []
+BIND_SOA_EMAIL = 'hostmaster.myzone.local'
+BIND_NS_LIST = []
