--- a/resources/os_base/usr/lib/contractor/resources/base_os.toml
+++ b/resources/os_base/usr/lib/contractor/resources/base_os.toml
@@ -1,6 +1,7 @@
 [ structure.linux-base ]
   description = 'Base Linux'
   scripts = { 'create' = 'linux-create', 'destroy' = 'linux-destroy' }
+  config_values = { 'root_pass': '$6$rootroot$oLo.loyMV45VA7/0sKV5JH/xBAXiq/igL4hQrGz3yd9XUavmC82tZm1lxW2N.5eLxQUlqp53wXKRzifZApP0/1', 'swap_size': 512 }
 
 [ script.linux-create ]
   description ='Install Linux'
@@ -56,4 +57,4 @@ end
 [ pxe.normal-boot ]
   boot_script = """echo Booting form Primary Boot Disk
 sanboot --no-describe --drive 0x80 || echo Primary Boot Disk is not Bootable"""
-  template = ''
+  template = '# Normal Boot'
