lots of misc fixes, apache, IpAddress on postgres, packaging

--- a/apache.conf
+++ b/apache.conf
@@ -3,6 +3,7 @@
 #  ServerAlias contractor.<domain>
 
   WSGIScriptAlias /api /var/www/contractor/api/contractor.wsgi
+  WSGIScriptAlias /config /var/www/contractor/api/contractor.wsgi
   WSGIDaemonProcess contractor display-name=%{GROUP}
   WSGIProcessGroup contractor
 
