--- a/master.conf.sample
+++ b/master.conf.sample
@@ -74,10 +74,18 @@ WSGI_APPLICATION = 'contractor.wsgi.application'
 # https://docs.djangoproject.com/en/1.8/ref/settings/#databases
 
 DATABASES = {
+  #  'default': {
+  #      'ENGINE': 'django.db.backends.sqlite3',
+  #      'NAME': '/var/lib/contractor/db.sqlite3',
+  #  }
     'default': {
-        'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': '/var/lib/contractor/db.sqlite3',
-    }
+      'ENGINE': 'django.db.backends.postgresql_psycopg2',
+      'NAME': 'contractor',
+      'USER': 'contractor',
+      'PASSWORD': 'contractor',
+      'HOST': '127.0.0.1',
+      'PORT': '',
+  }
 }
 
 
