PostMaster fixing, config better handeling of lists, deleting of structures and foundations, other minor tweeks

--- a/master.conf.sample
+++ b/master.conf.sample
@@ -2,7 +2,7 @@
 SECRET_KEY = '@(a3yjcc-d3uxt)q7n(tvdfhe4$%u2(dvkd9^cg26+4wmih7l7'
 
 # SECURITY WARNING: don't run with debug turned on in production!
-DEBUG = True
+DEBUG = False
 
 ALLOWED_HOSTS = []
 
