--- a/master.conf.sample
+++ b/master.conf.sample
@@ -6,6 +6,11 @@ DEBUG = False
 
 ALLOWED_HOSTS = []
 
+# PXE host settings
+
+CONTRACTOR_HOST = 'http://contractor/'
+PXE_IMAGE_LOCATION = 'http://static/pxe/'
+
 # get plugins
 
 import os
