--- a/master.conf.sample
+++ b/master.conf.sample
@@ -38,6 +38,11 @@ INSTALLED_APPS = (
     'contractor.SubContractor',
     'contractor.PostOffice',
     *plugin_list,
+    'other_plugins.text_file',
+    'other_plugins.status_indicator',
+    'django.contrib.auth',
+    'django.contrib.contenttypes',
+    'django.contrib.sessions'
 )
 
 MIDDLEWARE_CLASSES = (
@@ -46,19 +51,6 @@ MIDDLEWARE_CLASSES = (
 ROOT_URLCONF = 'contractor.urls'
 
 TEMPLATES = [
-    {
-        'BACKEND': 'django.template.backends.django.DjangoTemplates',
-        'DIRS': [],
-        'APP_DIRS': True,
-        'OPTIONS': {
-            'context_processors': [
-                'django.template.context_processors.debug',
-                'django.template.context_processors.request',
-                'django.contrib.auth.context_processors.auth',
-                'django.contrib.messages.context_processors.messages',
-            ],
-        },
-    },
 ]
 
 WSGI_APPLICATION = 'contractor.wsgi.application'
@@ -101,5 +93,5 @@ USE_TZ = True
 # NOTE: email should have a '.' in place of the '@', in most cases
 # it dose not have to be a real email address
 BIND_ALLOW_TRANSFER = []
-BIND_SOA_EMAIL = 'hostmaster.myzone.local'
-BIND_NS_LIST = []
+BIND_SOA_EMAIL = 'hostmaster.site1.local'
+BIND_NS_LIST = [ 'eth0.contractor.site1.local' ]
