added functions to get jobs from targets, fixes, updated cinp model refernces

--- a/master.conf.sample
+++ b/master.conf.sample
@@ -69,7 +69,7 @@ DATABASES = {
   }
 }
 
-MONGO_HOST = 'mongodb://127.0.0.1:27017/
+MONGO_HOST = 'mongodb://127.0.0.1:27017/'
 
 # Internationalization
 # https://docs.djangoproject.com/en/1.8/topics/i18n/
