--- a/master.conf.sample
+++ b/master.conf.sample
@@ -1,10 +1,8 @@
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = '@(a3yjcc-d3uxt)q7n(tvdfhe4$%u2(dvkd9^cg26+4wmih7l7'
+SECRET_KEY = '@(a3yjcc-d3rtt)q7n(tvdfhe4$%u2(dvkd9^cg26+4wmih7l7'
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = False
-
-ALLOWED_HOSTS = []
 
 # PXE host settings
 
@@ -47,10 +45,7 @@ INSTALLED_APPS = (
 MIDDLEWARE_CLASSES = (
 )
 
-ROOT_URLCONF = 'contractor.urls'
-
-TEMPLATES = [
-]
+ROOT_URLCONF = ''
 
 WSGI_APPLICATION = 'contractor.wsgi.application'
 
