--- a/master.conf.sample
+++ b/master.conf.sample
@@ -84,5 +84,5 @@ USE_TZ = True
 # NOTE: email should have a '.' in place of the '@', in most cases
 # it dose not have to be a real email address
 BIND_ALLOW_TRANSFER = []
-BIND_SOA_EMAIL = 'hostmaster.site1.local'
-BIND_NS_LIST = [ 'eth0.contractor.site1.local' ]
+BIND_SOA_EMAIL = 'hostmaster.site1.test'
+BIND_NS_LIST = [ 'eth0.contractor.site1.test' ]
