setupwizzard added primary interface, making cli utils more consistant with their main()s

--- a/apache.conf
+++ b/apache.conf
@@ -9,7 +9,6 @@
 
   DocumentRoot /var/www/contractor/ui
 
-  LogFormat "%a %t %D \"%r\" %>s %I %O \"%{Referer}i\" \"%{User-Agent}i\" %X" contractor_log
   ErrorLog ${APACHE_LOG_DIR}/contractor_error.log
-  CustomLog ${APACHE_LOG_DIR}/contractor_access.log contractor_log
+  CustomLog ${APACHE_LOG_DIR}/contractor_access.log combined
 </VirtualHost>
