--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-graph-vis": "^0.1.2",
     "react-router-dom": "4.1.2",
     "react-toolbox": "^2.0.0-beta.13",
     "react-graph-vis": "^0.1.2"
@@ -37,6 +38,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
+    "spdy": "3.4.7",
     "webpack-dev-server": "^2.6.0"
   },
   "scripts": {
