--- a/ui/package.json
+++ b/ui/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-graph-vis": "^0.1.2",
     "react-router-dom": "4.1.2",
     "react-toolbox": "^2.0.0-beta.13",
-    "react-graph-vis": "^0.1.2"
+    "react-graph-vis": "1.0.2",
+    "vis": "4.20.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
