--- a/contractor.conf.sample
+++ b/contractor.conf.sample
@@ -32,6 +32,7 @@ INSTALLED_APPS = (
     'contractor.BluePrint',
     'contractor.Utilities',
     'contractor.Building',
+    'contractor.Survey',
     'contractor.Foreman',
     'contractor.SubContractor',
     'contractor.PostOffice',
