--- a/contractor.conf.sample
+++ b/contractor.conf.sample
@@ -89,5 +89,5 @@ USE_TZ = True
 # NOTE: email should have a '.' in place of the '@', in most cases
 # it dose not have to be a real email address
 BIND_ALLOW_TRANSFER = []
-BIND_SOA_EMAIL = 'hostmaster.site1.test'
-BIND_NS_LIST = []
+BIND_SOA_EMAIL = 'hostmaster.site.test'
+BIND_NS_NETWORKED_LIST = [ 1 ]
