--- a/apache.conf
+++ b/apache.conf
@@ -1,11 +1,12 @@
 <VirtualHost *:80>
   ServerName contractor
-#  ServerAlias contractor.<domain>
+  ServerAlias contractor.*
 
   WSGIScriptAlias /api /var/www/contractor/api/contractor.wsgi
   WSGIScriptAlias /config /var/www/contractor/api/contractor.wsgi
   WSGIDaemonProcess contractor display-name=%{GROUP}
   WSGIProcessGroup contractor
+  WSGIApplicationGroup %{GLOBAL}
 
   DocumentRoot /var/www/contractor/ui
 
