ui reload fix, some mis comments

--- a/apache.conf
+++ b/apache.conf
@@ -10,6 +10,14 @@
 
   DocumentRoot /var/www/contractor/ui
 
+  RewriteEngine on
+  RewriteCond %{REQUEST_URI} "^/api" [OR]
+  RewriteCond %{REQUEST_URI} "^/config"
+  RewriteRule ^ - [L]
+
+  RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
+  RewriteRule ^ /index.html [L]
+
   ErrorLog ${APACHE_LOG_DIR}/contractor_error.log
   CustomLog ${APACHE_LOG_DIR}/contractor_access.log combined
 </VirtualHost>
