--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: contractor
-Section: multiverse/python
+Section: multiverse/t3kton
 Priority: optional
 Maintainer: Peter Howe <pnhowe@gmail.com>
 Build-Depends: debhelper (>= 7), python3 (>= 3.4), python3-dev (>=3.4), python3-setuptools (>= 20.0), npm (>= 3.5), nodejs (>= 8.10), lsb-release
 Standards-Version: 3.8.3
-X-Python3-Version: >= 3.4
+X-Python3-Version: >= 3.6
 
 Package: contractor
 Architecture: all
-Depends: python3 (>= 3.4), python3-django, apache2, libapache2-mod-wsgi-py3, postgresql-client, python3-parsimonious, python3-werkzeug, python3-psycopg2, python3-cinp (>= 0.17), python3-toml, python3-jinja2, python3-pymongo, bind9, bind9utils, ${misc:Depends}, ${python3:Depends}
+Depends: python3 (>= 3.6), python3-django, apache2, libapache2-mod-wsgi-py3, postgresql-client, python3-parsimonious, python3-werkzeug, python3-psycopg2, python3-cinp (>= 0.24), python3-toml, python3-jinja2, python3-pymongo, bind9, bind9utils, ${misc:Depends}, ${python3:Depends}
 Description: Contractor
   Contractor
