--- a/contractor.conf.sample
+++ b/contractor.conf.sample
@@ -1,6 +1,8 @@
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = '@(a3yjcc-d3rtt)q7n(tvdfhe4$%u2(dvkd9^cg26+4wmih7l7'
 
+DEFAULT_AUTO_FIELD = 'django.db.models.AutoField'
+
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = False
 
