--- a/contractor.conf.sample
+++ b/contractor.conf.sample
@@ -1,5 +1,5 @@
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = '@(a3yjcc-d3rtt)q7n(tvdfhe4$%u2(dvkd9^cg26+4wmih7l7'
+SECRET_KEY = '@(a3yjcc-d3rtt)q7n(tvdfes4$%u2(dvkd9^cg26+4wmih7l7'
 
 DEFAULT_AUTO_FIELD = 'django.db.models.AutoField'
 
@@ -8,10 +8,13 @@ DEBUG = False
 
 # set UI_HOSTNAME when the API and UI are on separate hosts
 UI_HOSTNAME = None
+ALLOWED_HOSTS = []
 
 # PXE host settings
 
-CONTRACTOR_HOST = 'http://contractor/'
+CONTRACTOR_HOST = 'http://contractor'
+# leave None for the default 80/443
+CONTRACTOR_PORT = None
 PXE_IMAGE_LOCATION = 'http://static/pxe/'
 
 # set to None to disable, or '*CONSOLE*' to output to stdout
@@ -84,8 +87,6 @@ LANGUAGE_CODE = 'en-us'
 TIME_ZONE = 'UTC'
 
 USE_I18N = True
-
-USE_L10N = True
 
 USE_TZ = True
 
